--- a/client/dishes.html
+++ b/client/dishes.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Interactive Shopping Cart</title>
+    <title>VESTO</title>
     <link rel="stylesheet" href="./libraries/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://use.fontawesome.com/5b4025bff4.js"></script>
